--- a/static/index.html
+++ b/static/index.html
@@ -22,15 +22,15 @@
 
 <img id="the-picture" width="200" /> 
 -->
-    <div id="image-upload-container">
+    <div class="main-container">
+            <input type="file" id="image-upload" accept="image/*" multiple style="display: none;">
+            <button id="image-upload-button">Upload Images</button>
+            <div class="results-container">
+                <div id="image-container"></div>
+                <div id="prediction-container"></div>
+            </div>
+        </div>
 
-    <input type="file" id="image-upload" accept="image/*" multiple style="display: none;">
-        <button id="image-upload-button">Upload Images</button>
-    </div>
-
-    <div id="image-container">Uploaded images will appear here</div>
-    <div id="prediction-container">Prediction results will appear here</div>
-  
     <script src="static/index.js" type="text/javascript"></script>
 
 </body>
